plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.jlink' version '2.25.0'
}

group = 'com.booktracker'
version = '0.0.1-SNAPSHOT'
description = 'GDP3-GHA'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

def junitVersion = "5.12.1"

dependencies {
    implementation 'org.springframework.security:spring-security-crypto:6.2.1'
    implementation 'org.controlsfx:controlsfx:11.2.1'
    implementation('com.dlsc.formsfx:formsfx-core:11.6.0') {
        exclude group: 'org.openjfx'
    }
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
    implementation('eu.hansolo:tilesfx:21.0.9') {
        exclude group: 'org.openjfx'
    }
    implementation 'org.mapstruct:mapstruct:1.6.3'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    runtimeOnly 'com.h2database:h2'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'org.mockito:mockito-core:5.5.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()

    jvmArgs = [
            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
            "--add-opens", "java.base/java.util=ALL-UNNAMED",
            "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
            "--add-opens", "java.base/java.nio=ALL-UNNAMED",
            "--add-opens", "java.base/java.io=ALL-UNNAMED",
            "--add-opens", "java.base/java.net=ALL-UNNAMED",

            "-XX:+EnableDynamicAgentLoading",
            "-Djdk.instrument.traceUsage=false",

            "-Xshare:off"
    ]

    testLogging {
        events "passed", "skipped", "failed"
    }
}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

javafx {
    version = "21.0.6"
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing' ]
}

jlink {
    imageZip = layout.buildDirectory.file("/distributions/app-${javafx.platform.classifier}.zip")

    options = [
            '--strip-debug',
            '--compress', '2',
            '--no-header-files',
            '--no-man-pages'
    ]

    launcher {
        name = 'app'
    }
}

application {
    mainClass = 'com.booktracker.Launcher'
}
